--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"
+    <title>Page Title</title>
+  </head>
+  <body>
+    <h1>Page Heading</h1>
+    <p> paragraph text</p>
+  </body>
+</html>
