--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <title>Page Title</title>
   </head>
   <body>
-    <h1>Page Heading</h1>
-    <p> paragraph text</p>
+    <h1>My Homepage</h1>
+    <img src="Logo.png.png"= "UNC Logo">
+    <p>
+        <a href="amuse.html">Amuse Me</a>
+    </p>
+    <p>
+        <a href="inspire.html">Inspire Me</a>
+    </p>
+    <p>
+        <a href="profile.html">My Profile</a>
+    </p>
+    <p>
+        <a href="amuse.html">Amuse Me</a>
+    </p>
   </body>
 </html>
