--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <title>Page Title</title>
   </head>
   <body>
     <h1>My Homepage</h1>
-    <img src="Logo.png.png"= "UNC Logo">
+    <img src="Logo.png.png"=alt"UNC Logo">
     <p>
         <a href="amuse.html">Amuse Me</a>
     </p>
