Validate my page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="profile.html">My Profile</a>
     </p>
     <p>
-        <a href="amuse.html">Amuse Me</a>
+        <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fjacobnederbragt.github.io%2F">Validate my page</a>
     </p>
   </body>
 </html>
