--- a/educate.html
+++ b/educate.html
@@ -2,20 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Educate Me</title>
   </head>
   <body>
-    <h1>Page Heading</h1>
-    <img src="logo.png" alt="UNC Logo">
-    <!--
-    <p>
-      paragraph text line       1
-    </p>
-    -->
-    <p>
-      <i>line 2</i>
-      <br>
-      <em>line 3</em>
+    <h1>Educate Me</h1>
+    <section>
+    <h2>Ted Talks</h2>
+    <iframe src="https://www.youtube.com/watch?v=a2MR5XbJtXU" width="800" height="500"></iframe>
+    </section>
+    <section>
+    <h2>RSA Animations</h2>
+    </section>
     </p>
   </body>
 </html>
