--- a/educate.html
+++ b/educate.html
@@ -8,7 +8,7 @@
     <h1>Educate Me</h1>
     <section>
     <h2>Ted Talks</h2>
-    <iframe src="https://www.youtube.com/watch?v=a2MR5XbJtXU" width="800" height="500"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/a2MR5XbJtXU?si=YQOVfl9t30KVQhYD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <section>
     <h2>RSA Animations</h2>
