--- a/test.html
+++ b/test.html
@@ -35,6 +35,11 @@
             <td><a href="https://jacobnederbragt.github.io/inspire.html">https://jacobnederbragt.github.io/inspire.html</a></td>
             <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/inspire.html">VALIDATE</a></td>
         </tr>
+        <tr>
+            <td>Educate Me</td>
+            <td><a href="https://jacobnederbragt.github.io/educate.html">https://jacobnederbragt.github.io/educate.html</a></td>
+            <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/educate.html">VALIDATE</a></td>
+        </tr>
     </tbody>
     </table>
   </body>
