--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>My Homepage</h1>
-    <img src="Logo.png.png" alt="UNC Logo">
+    <img src="Images/Logo.png.png" alt="UNC Logo">
     <p>
         <a href="amuse.html">Amuse Me</a>
     </p>
