--- a/amuse.html
+++ b/amuse.html
@@ -17,5 +17,8 @@
     <h2>Fatherly Figure</h2>
     <p>You either love them or hate them, or both, but dad jokes always make you feel a certain way after someone tells you one. The link below will give you all of your dad joke needs and more</p>
     <a href="https://bestdadjokes.com/">Dad Jokes</a>
+    <br>
+    <br>
+    <a href="index.html"><img src="Images/Homebutton.png"></a>
   </body>
 </html>
