--- a/educate.html
+++ b/educate.html
@@ -16,5 +16,8 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/nJmGrNdJ5Gw?si=aWbGPcWjvfPv14uy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XBmJay_qdNc?si=6U532xr7p9k3fmej" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
+    <br>
+    <br>
+    <a href="index.html"><img src="Images/Homebutton.png"></a>
   </body>
 </html>
