--- a/profile.html
+++ b/profile.html
@@ -9,5 +9,8 @@
     <p>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
     I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
     I also enjoy single player video games with good story lines when I am relaxing.</p>
+    <br>
+    <br>
+    <a href="index.html"><img src="Images/Homebutton.png"></a>
   </body>
 </html>
