--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,6 @@
     I also enjoy single player video games with good story lines when I am relaxing.</p>
     <br>
     <br>
-    <a href="index.html"><img src="Images/Homebutton.png"></a>
+    <a href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
