--- a/amuse.html
+++ b/amuse.html
@@ -19,6 +19,6 @@
     <a href="https://bestdadjokes.com/">Dad Jokes</a>
     <br>
     <br>
-    <a href="index.html"><img src="Images/Homebutton.png"></a>
+    <a href="index.html"><img src="Images/Homebutton.png"alt="Homebutton"></a>
   </body>
 </html>
