--- a/educate.html
+++ b/educate.html
@@ -8,13 +8,13 @@
     <h1>Educate Me</h1>
     <section>
     <h2>TED Talks</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/a2MR5XbJtXU?si=YQOVfl9t30KVQhYD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/FuooVrSpffk?si=ImZcnL7THrsmKuhP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/a2MR5XbJtXU?si=YQOVfl9t30KVQhYD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FuooVrSpffk?si=ImZcnL7THrsmKuhP" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <section>
     <h2>RSA Animations</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/nJmGrNdJ5Gw?si=aWbGPcWjvfPv14uy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/XBmJay_qdNc?si=6U532xr7p9k3fmej" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nJmGrNdJ5Gw?si=aWbGPcWjvfPv14uy" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XBmJay_qdNc?si=6U532xr7p9k3fmej" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <br>
     <br>
