--- a/test.html
+++ b/test.html
@@ -45,6 +45,11 @@
           <td><a href="https://jacobnederbragt.github.io/template.html">https://jacobnederbragt.github.io/template.html</a></td>
           <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/template.html">VALIDATE</a></td>
       </tr>
+      <tr>
+        <td>Superheros</td>
+        <td><a href="https://jacobnederbragt.github.io/superhero.html">https://jacobnederbragt.github.io/superhero.html</a></td>
+        <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/superhero.html">VALIDATE</a></td>
+    </tr>
     </tbody>
     </table>
   </body>
