--- a/test.html
+++ b/test.html
@@ -41,7 +41,7 @@
             <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/educate.html">VALIDATE</a></td>
         </tr>
         <tr>
-          <td>Tempalte</td>
+          <td>Template</td>
           <td><a href="https://jacobnederbragt.github.io/template.html">https://jacobnederbragt.github.io/template.html</a></td>
           <td><a href="https://validator.w3.org/nu/?doc=https://jacobnederbragt.github.io/template.html">VALIDATE</a></td>
       </tr>
