--- a/superhero.html
+++ b/superhero.html
@@ -23,7 +23,7 @@
       tr :hover {background-color: lightgray;}
       th
       {
-      background-color:blue;
+      background-color: black;
       color: white;
     }
     </style>
