--- a/superhero.html
+++ b/superhero.html
@@ -7,7 +7,7 @@
       img
       {
         height: 100px;
-        border: 1px solid #0f0101;
+        border: 1px solid black;
         border-radius: 10px;
         padding: 5px;
       }
@@ -17,7 +17,7 @@
       }
       td, th
       {
-        border: 2px solid black;
+        border: 2px solid gray;
         padding: 15px;      
       }
       tr :hover {background-color: lightgray;}
