Lots of CSS stuff

--- a/amuse.html
+++ b/amuse.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Randomly Amusing</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1>Randomly Amusing Stuff 4 When You're Bored</h1>
@@ -19,6 +20,6 @@
     <a href="https://bestdadjokes.com/">Dad Jokes</a>
     <br>
     <br>
-    <a href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
