--- a/superhero.html
+++ b/superhero.html
@@ -27,7 +27,7 @@
       color: white;
     }
     </style>
-
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
    <h1>My Favorite Superheros</h1>
@@ -121,6 +121,6 @@
    </table>
    <br>
    <br>
-   <a href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+   <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
