--- a/profile.html
+++ b/profile.html
@@ -2,15 +2,16 @@
   <html lang="en">
   <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1>Jacob N</h1>
     <img src="Images/Jacob-N.jpg" alt=" Picture of Jacob N">
-    <p>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
+    <h2>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
     I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
-    I also enjoy single player video games with good story lines when I am relaxing.</p>
+    I also enjoy single player video games with good story lines when I am relaxing.</h2>
     <br>
     <br>
-    <a href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
