--- a/educate.html
+++ b/educate.html
@@ -23,6 +23,6 @@
     </section>
     <br>
     <br>
-    <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
