--- a/superhero.html
+++ b/superhero.html
@@ -45,7 +45,7 @@
       <tr>
         <th>Batman</th>
         <td>Bruce Wayne</td>
-        <td><a href="Images/Batman.jpeg"><img src="Images/Batman.jpeg" alt="Image of Batman"></a></td>
+        <td><a href="images/Batman.jpeg"><img src="images/Batman.jpeg" alt="Image of Batman"></a></td>
         <td>
           <ul>
             <li>Batarang</li>
@@ -64,7 +64,7 @@
       <tr>
         <th>Deadpool</th>
         <td>Wade Wilson</td>
-        <td><a href="Images/Deadpool.jpeg"><img src="Images/Deadpool.jpeg" alt="Image of Deadpool"></a></td>
+        <td><a href="images/Deadpool.jpeg"><img src="images/Deadpool.jpeg" alt="Image of Deadpool"></a></td>
         <td>
           <ul>
             <li>Gunman</li>
@@ -83,7 +83,7 @@
       <tr>
         <th>Spiderman</th>
         <td>Peter Parker</td>
-        <td><a href="Images/Spiderman.jpeg"><img src="Images/Spiderman.jpeg" alt="Image of Spiderman"></a></td>
+        <td><a href="images/Spiderman.jpeg"><img src="images/Spiderman.jpeg" alt="Image of Spiderman"></a></td>
         <td>
           <ul>
             <li>Webs</li>
@@ -102,7 +102,7 @@
       <tr>
         <th>Lockjaw</th>
         <td>Lockjaw</td>
-        <td><a href="Images/Lockjaw.jpeg"><img src="Images/Lockjaw.jpeg" alt="Image of Lockjaw"></a></td>
+        <td><a href="images/Lockjaw.jpeg"><img src="images/Lockjaw.jpeg" alt="Image of Lockjaw"></a></td>
         <td>
           <ul>
             <li>Teleportation</li>
@@ -121,6 +121,6 @@
    </table>
    <br>
    <br>
-   <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+   <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
