--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <h1>My Homepage</h1>
-    <img src="Images/Logo.png" alt="UNC Logo">
+    <img src="images/Logo.png" alt="UNC Logo">
     <ul>
       <li>
         <a href="profile.html">My Profile</a>
