--- a/profile.html
+++ b/profile.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h1>Jacob N</h1>
-    <img src="Images/Jacob-N.jpg" alt=" Picture of Jacob N">
+    <img src="images/Jacob-N.jpg" alt=" Picture of Jacob N">
     <h2>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
     I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
     I also enjoy single player video games with good story lines when I am relaxing.</h2>
     <br>
     <br>
-    <a class="footertext" href="index.html"><img src="Images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
