--- a/resume/index.html
+++ b/resume/index.html
@@ -22,13 +22,13 @@
                 <li>
                     <ul>
                         <li class="location">Mountain Range High School</li>
-                        <li class="date">2019</li>
+                        <li class="date">Graduated 2019</li>
                      </ul>
                 </li>
                 <li>
                     <ul>
                         <li class="location">University of Northern Colorado</li>
-                        <li class="date">2024</li>
+                        <li class="date">Graduating 2024</li>
                         <li class="major">Major: Business Finance</li>
                      </ul>
                 </li>
