--- a/resume/contactinfo.html
+++ b/resume/contactinfo.html
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="contactinfo.html">Contact Info</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#expereince">Experience</a></li>
+                <li><a href="index.html#education">Education</a></li>
+                <li><a href="index.html#experince">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>    
             </ul>
         </nav>
