--- a/amuse.html
+++ b/amuse.html
@@ -20,6 +20,6 @@
     <a href="https://bestdadjokes.com/">Dad Jokes</a>
     <br>
     <br>
-    <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
