--- a/inspire.html
+++ b/inspire.html
@@ -20,6 +20,6 @@
         <p><a href="https://www.si.edu/spotlight/highlights-abraham-lincoln-1809-1865#:~:text=Lincoln's%20legacy%20is%20based%20on,social%20freedom%20for%20African%2DAmericans.">Learn More About Abraham Lincoln...</a></p>
         <br>
         <br>
-        <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
+        <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
     </body>
 </html>
