--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Jacob N</h1>
-    <img src="images/Jacob-N.jpg" alt=" Picture of Jacob N">
+    <img src="images/jacob-n.jpg" alt=" Picture of Jacob N">
     <h2>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
     I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
     I also enjoy single player video games with good story lines when I am relaxing.</h2>
