--- a/superhero.html
+++ b/superhero.html
@@ -45,7 +45,7 @@
       <tr>
         <th>Batman</th>
         <td>Bruce Wayne</td>
-        <td><a href="images/batman.jpeg"><img src="images/batman.jpeg" alt="Image of Batman"></a></td>
+        <td><a href="images/batman.JPEG"><img src="images/batman.JPEG" alt="Image of Batman"></a></td>
         <td>
           <ul>
             <li>Batarang</li>
