--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,6 @@
     I also enjoy single player video games with good story lines when I am relaxing.</h2>
     <br>
     <br>
-    <a class="footertext" href="index.html"><img src="images/Homebutton.png" alt="Homebutton"></a>
+    <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
   </body>
 </html>
