--- a/amuse.html
+++ b/amuse.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Randomly Amusing</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Randomly Amusing Stuff 4 When You're Bored</h1>
+    <h1>Randomly Amusing Stuff</h1>
     <p>Check out the links below to find videos and websites that I find amusing! </p>
     <h2>Vine Compilations</h2>
     <p>TikTok is the new trend for people to post their funny videos and try to get some attention. The root of TikTok in my opinion is Vine, and nothing beats a compliation of some old school Vine videos to get a chuckle (Some may be NSFW)</p>
