--- a/inspire.html
+++ b/inspire.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Inspire Me</title>
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <style>
-        img
+        .protrait
         {
-            width: 30vw;
+            width: 100%;
         }
     </style>
     <body>
-        <h1>Abraham Lincoln</h1>
-        <h2>Portrait</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Abraham_Lincoln_O-77_matte_collodion_print.jpg/1200px-Abraham_Lincoln_O-77_matte_collodion_print.jpg" alt="MLK">
-        <h2>What Makes A Hero?</h2>
-        <p>A hero is someone who does acts of good for others. They go out of their way to ensure that people are getting what they rightfully deserve or they take them out of situations that are harmful to them. There are many types of heros, they can even be your neighbor.</p>
-        <p>Abraham Lincoln was the <strong>16th president</strong> of the United States whos main legacy was winning the civil war between the Confederacy and the Union. The Union won the war which ended slavery, and created the possibility of civil and social freedom for African-Americans. Without the help of Lincoln, the equality that we see in the U.S. today would be very different. Even though he lead the Union to victory, unfortunantly he was not able to help guide the nation because he was assassinated. On April 15, 1865 he was assassinated by John Wilkes Booth, a Confederate spy, at Ford's Theatre. Lincoln was shot in the back of the head and was rushed to Petersen House to attempt to save his life. The gunshot wound put him into an eight hour coma which lead to his death that spring morning. Even though his victory was short lived during his life time he made significant changes to U.S. and started a trend for equality in which we are still fighting for today.</p>
-        <p><a href="https://www.si.edu/spotlight/highlights-abraham-lincoln-1809-1865#:~:text=Lincoln's%20legacy%20is%20based%20on,social%20freedom%20for%20African%2DAmericans.">Learn More About Abraham Lincoln...</a></p>
-        <br>
-        <br>
-        <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
+        <div class="container-flex">
+            <div class="row"></div>
+                <h1 class="display-1">Abraham Lincoln</h1>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h2 class="display-4">Portrait</h2>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Abraham_Lincoln_O-77_matte_collodion_print.jpg/1200px-Abraham_Lincoln_O-77_matte_collodion_print.jpg" class="img-fluid portrait" alt="MLK">
+                </div>
+                <div class="col-sm-8 text-center align-self-center">
+                    <h2 class="display-4">What Makes A Hero?</h2>
+                    <p class="display-6">A hero is someone who does acts of good for others. They go out of their way to ensure that people are getting what they rightfully deserve or they take them out of situations that are harmful to them. There are many types of heros, they can even be your neighbor.</p>
+                    <p class="display-8">Abraham Lincoln was the <strong>16th president</strong> of the United States whos main legacy was winning the civil war between the Confederacy and the Union. The Union won the war which ended slavery, and created the possibility of civil and social freedom for African-Americans. Without the help of Lincoln, the equality that we see in the U.S. today would be very different. Even though he lead the Union to victory, unfortunantly he was not able to help guide the nation because he was assassinated. On April 15, 1865 he was assassinated by John Wilkes Booth, a Confederate spy, at Ford's Theatre. Lincoln was shot in the back of the head and was rushed to Petersen House to attempt to save his life. The gunshot wound put him into an eight hour coma which lead to his death that spring morning. Even though his victory was short lived during his life time he made significant changes to U.S. and started a trend for equality in which we are still fighting for today.</p>
+                    <p><a href="https://www.si.edu/spotlight/highlights-abraham-lincoln-1809-1865#:~:text=Lincoln's%20legacy%20is%20based%20on,social%20freedom%20for%20African%2DAmericans.">Learn More About Abraham Lincoln...</a></p>
+                    <br>
+                    <br>
+                    <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
