--- a/profile.html
+++ b/profile.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
   <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Me</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      .profilepic
+      {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <h1>Jacob N</h1>
-    <img src="images/jacob-n.jpg" alt=" Picture of Jacob N">
-    <h2>In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
-    I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
-    I also enjoy single player video games with good story lines when I am relaxing.</h2>
-    <br>
-    <br>
-    <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
+    <div class="container-flex">
+      <div class="row">
+        <h1 class="display-1 text-center">Jacob N</h1>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/jacob-n.jpg" alt=" Picture of Jacob N" class="img-fluid profilepic">
+        </div>
+        <div class="col-sm-6 text-center align-self-center">
+          <h2 class="display-7">In my free time I enjoy being in the mountians, if that is hiking, camping, or just realxing, you will find me at my happiest there.
+          I also really enjoy weight lifting when I am more crunched on time so you most likely will see me at the gym at most points during the week. 
+          I also enjoy single player video games with good story lines when I am relaxing.</h2>
+          <br>
+          <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
