--- a/superhero.html
+++ b/superhero.html
@@ -29,9 +29,11 @@
     }
     </style>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
    <h1>My Favorite Superheros</h1>
+   <div  class="table table-dark table-bordered table-responsive">
    <table>  
     <thead>
       <tr>
@@ -120,6 +122,7 @@
       </tr>
     </tbody>
    </table>
+   </div>
    <br>
    <br>
    <a class="footertext" href="index.html"><img src="images/homebutton.png" alt="Homebutton"></a>
